<resources>
    <string name="app_name">MatchTrackerAppV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    //tests
    <string name="test">Test</string>
    <string name="percentTest">77%</string>
    <string name="manaDesc">manasymbol</string>

    //Main Activity
    <string name="mainTitle">My decks</string>
    <string name="label_format">Format :</string>
    <string name="label_game_played"># of game played :</string>

    //Formats
    <string name="Format_standard">Standard</string>
    <string name="Format_modern">Modern</string>
    <string name="Format_legacy">Legacy</string>
    <string name="Format_arena">Arena</string>
    <string name="Format_limited">Limited</string>

    //Deck Details
    <string name="title_activity_deck_details">Deck statistics</string>
    <string name="title_home">Deck name</string>
    <string name="deck_details_vs">Versus :</string>
    <string name="btn_add_match">Add a match</string>
    <string name="btn_deck_choice">Choose deck</string>
    //archetypes
    <string name="aggro_vs">Aggro :</string>
    <string name="midrange_vs">Midrange :</string>
    <string name="control_vs">Control :</string>
    <string name="tempo_vs">Tempo :</string>
    <string name="big_mana_vs">Big Mana :</string>
    <string name="combo_vs">Combo :</string>

    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
