<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="682dp">
    <android.support.constraint.ConstraintLayout

        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ViewModel.DeckDetails">

        <TextView
            android:id="@+id/deck_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/winRate_overall"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/title_home"
            android:textSize="32sp"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/label_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/deck_detail_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/label_format"/>
        <TextView
            android:id="@+id/deck_detail_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/deck_detail_name"
            app:layout_constraintLeft_toRightOf="@id/label_format"
            android:layout_marginTop="15dp"
            android:text="@string/test"
            />
        <TextView
            android:id="@+id/label_game_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/label_format"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/label_game_played"/>
        <TextView
            android:id="@+id/deck_detail_game_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/deck_detail_format"
            app:layout_constraintLeft_toRightOf="@id/label_game_played"
            android:layout_marginTop="15dp"
            android:text="@string/test"/>
        <TextView
            android:id="@+id/winRate_overall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/percentTest"
            android:textSize="56sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp" />
        <TextView
            android:id="@+id/versus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_game_played"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"
            android:text="@string/deck_details_vs"
            android:layout_marginStart="30dp" />
        <!--archetypes name -->
        <TextView
            android:id="@+id/vs_aggro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/versus"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/vs_midrange"
            android:layout_marginTop="15dp"
            android:textSize="26sp"
            android:text="@string/aggro_vs"/>
        <TextView
            android:id="@+id/vs_midrange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/versus"
            app:layout_constraintLeft_toRightOf="@+id/vs_aggro"
            app:layout_constraintRight_toLeftOf="@id/vs_control"
            android:layout_marginTop="15dp"
            android:textSize="26sp"
            android:text="@string/midrange_vs"/>
        <TextView
            android:id="@+id/vs_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/versus"
            app:layout_constraintLeft_toRightOf="@id/vs_midrange"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            android:textSize="26sp"
            android:text="@string/control_vs"/>
        <TextView
            android:id="@+id/vs_tempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/aggro_wr"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/vs_big_mana"
            android:layout_marginTop="15dp"
            android:textSize="26sp"
            android:text="@string/tempo_vs"/>
        <TextView
            android:id="@+id/vs_big_mana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/aggro_wr"
            app:layout_constraintLeft_toRightOf="@id/vs_tempo"
            app:layout_constraintRight_toLeftOf="@id/vs_combo"
            android:layout_marginTop="15dp"
            android:textSize="26sp"
            android:text="@string/big_mana_vs"/>
        <TextView
            android:id="@+id/vs_combo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/aggro_wr"
            app:layout_constraintLeft_toRightOf="@id/vs_big_mana"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="15dp"
            android:textSize="26sp"
            android:text="@string/combo_vs"/>
        <!--win rates-->
        <TextView
            android:id="@+id/aggro_wr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/midrange_wr"
            app:layout_constraintTop_toBottomOf="@+id/vs_aggro"
            app:layout_constraintBottom_toTopOf="@+id/vs_tempo"
            android:text="@string/percentTest"
            android:textSize="32sp"
            />
        <TextView
            android:id="@+id/midrange_wr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/aggro_wr"
            app:layout_constraintRight_toLeftOf="@+id/control_wr"
            app:layout_constraintTop_toBottomOf="@+id/vs_aggro"
            android:text="@string/percentTest"
            android:textSize="32sp"
            />
        <TextView
            android:id="@+id/control_wr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/midrange_wr"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vs_aggro"
            android:text="@string/percentTest"
            android:textSize="32sp"
            />
        <TextView
            android:id="@+id/tempo_wr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/big_mana_wr"
            app:layout_constraintTop_toBottomOf="@+id/vs_tempo"
            android:text="@string/percentTest"
            android:textSize="32sp"
            />
        <TextView
            android:id="@+id/big_mana_wr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tempo_wr"
            app:layout_constraintRight_toLeftOf="@id/combo_wr"
            app:layout_constraintTop_toBottomOf="@id/vs_tempo"
            android:text="@string/percentTest"
            android:textSize="32sp"
            />

        <TextView
            android:id="@+id/combo_wr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentTest"
            android:textSize="32sp"
            app:layout_constraintLeft_toRightOf="@id/big_mana_wr"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vs_tempo"/>
        <TextView
            android:id="@+id/add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add a match"
            android:layout_marginTop="20sp"
            android:textSize="32sp"
            app:layout_constraintTop_toBottomOf="@id/big_mana_wr"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <include
            android:id="@+id/include_addition"
            layout="@layout/add_match"
            app:layout_constraintTop_toBottomOf="@id/add_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
        <Button
            android:id="@+id/btn_history"
            android:layout_width="395dp"
            android:layout_height="54dp"
            android:text="history"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@id/include_addition"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

    </android.support.constraint.ConstraintLayout>


</ScrollView>

    <!--
    <android.support.v4.view.ViewPager
        android:id="@+id/deck_details_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/big_mana_wr">

    </android.support.v4.view.ViewPager>
    -->


